--- a/doc/man/strayacoind.1
+++ b/doc/man/strayacoind.1
@@ -529,7 +529,7 @@ Copyright (C) 2009-2017 The Bitcoin Core developers
 Copyright (C) 2011-2017 The strayacoind Core developers
 
 Please contribute if you find strayacoind Core useful. Visit
-<https://faithco.in> for further information about the software.
+<https://www.strayacoin.org/> for further information about the software.
 The source code is available from <https://github.com/strayacoin-project/strayacoin>.
 
 This is experimental software.
