--- a/doc/man/strayacoin-cli.1
+++ b/doc/man/strayacoin-cli.1
@@ -79,7 +79,7 @@ filename in strayacoind directory, required if strayacoind/\-Qt runs
 with multiple wallets)
 .SH COPYRIGHT
 Copyright (C) 2009-2017 The Bitcoin Core developers
-Copyright (C) 2011-2017 The strayacoind Core developers
+Copyright (C) 2018 The Strayacoin Core developers
 
 Please contribute if you find strayacoind Core useful. Visit
 <https://www.strayacoin.org/> for further information about the software.
