--- a/doc/man/strayacoin-qt.1
+++ b/doc/man/strayacoin-qt.1
@@ -547,7 +547,7 @@ Show splash screen on startup (default: 1)
 Reset all settings changed in the GUI
 .SH COPYRIGHT
 Copyright (C) 2009-2017 The Bitcoin Core developers
-Copyright (C) 2011-2017 The strayacoind Core developers
+Copyright (C) 2018 The Strayacoin Core developers
 
 Please contribute if you find strayacoind Core useful. Visit
 <https://www.strayacoin.org/> for further information about the software.
