--- a/doc/man/strayacoin-tx.1
+++ b/doc/man/strayacoin-tx.1
@@ -113,7 +113,7 @@ set=NAME:JSON\-STRING
 Set register NAME to given JSON\-STRING
 .SH COPYRIGHT
 Copyright (C) 2009-2017 The Bitcoin Core developers
-Copyright (C) 2011-2017 The strayacoind Core developers
+Copyright (C) 2018 The Strayacoin Core developers
 
 Please contribute if you find strayacoind Core useful. Visit
 <https://www.strayacoin.org/> for further information about the software.
