--- a/doc/man/strayacoind.1
+++ b/doc/man/strayacoind.1
@@ -526,7 +526,7 @@ non\-verbose mode, non\-segwit(0) or segwit(1) (default: 1)
 Set the number of threads to service RPC calls (default: 4)
 .SH COPYRIGHT
 Copyright (C) 2009-2017 The Bitcoin Core developers
-Copyright (C) 2011-2017 The strayacoind Core developers
+Copyright (C) 2018 The Strayacoin Core developers
 
 Please contribute if you find strayacoind Core useful. Visit
 <https://www.strayacoin.org/> for further information about the software.
